# api/sp/v1alpha1/provider/types.gen.go
@@ -9,6 +9,10 @@ import (
 	"time"
 )
 
+const (
+	BearerAuthScopes bearerAuthContextKey = "bearerAuth.Scopes"
+)
+
 // Error RFC 7807 compliant error response
 type Error struct {
 	// Detail Human-readable explanation specific to this occurrence
@@ -106,6 +110,9 @@ type ResourceCapacity struct {
 
 // ProviderIdPath defines model for ProviderIdPath.
 type ProviderIdPath = string
+
+// bearerAuthContextKey is the context key for bearerAuth security scheme
+type bearerAuthContextKey string
 
 // ListProvidersParams defines parameters for ListProviders.
 type ListProvidersParams struct {
