# api/sp/v1alpha1/resource_manager/types.gen.go
@@ -7,6 +7,10 @@ import (
 	"time"
 )
 
+const (
+	BearerAuthScopes bearerAuthContextKey = "bearerAuth.Scopes"
+)
+
 // Defines values for ServiceTypeInstanceDeletionStatus.
 const (
 	FAILED          ServiceTypeInstanceDeletionStatus = "FAILED"
@@ -95,6 +99,9 @@ type ServiceTypeInstanceList struct {
 
 // InstanceIdPath defines model for InstanceIdPath.
 type InstanceIdPath = string
+
+// bearerAuthContextKey is the context key for bearerAuth security scheme
+type bearerAuthContextKey string
 
 // ListInstancesParams defines parameters for ListInstances.
 type ListInstancesParams struct {
